--- a/.github/workflows/helm-test.yml
+++ b/.github/workflows/helm-test.yml
@@ -24,8 +24,25 @@ env:
   CT_CONFIGFILE: "${{ github.workspace }}/.github/configs/ct.yml"
 
 jobs:
+  # Reference the security-check workflow when running on PRs
+  security-check:
+    if: github.event_name == 'pull_request'
+    uses: ./.github/workflows/security-check.yml
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
+    secrets: inherit
+
   lint-helm-chart:
     runs-on: ubuntu-latest
+    # Add dependency on security-check for PR events only
+    needs: [security-check]
+    # Simple condition: Run on push OR on PRs where security-check outputs security_cleared=true
+    if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' }}
+    # Override permissions for this job to be more restrictive
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
