--- a/.github/workflows/pull_request_integration_tests_vm_6.10_x86_64.yml
+++ b/.github/workflows/pull_request_integration_tests_vm_6.10_x86_64.yml
@@ -13,8 +13,22 @@ permissions:
   contents: read
 
 jobs:
+  # Reference the security-check workflow when running on PRs
+  security-check:
+    if: github.event_name == 'pull_request'
+    uses: ./.github/workflows/security-check.yml
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
+    secrets: inherit
+    
   test:
+    # Add dependency on security-check for PR events only
+    needs: [security-check]
+    if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' }}
     uses: ./.github/workflows/workflow_integration_tests_vm.yml
     with:
       arch: x86_64
       kernel-version: 6.10.6
+      timeout-minutes: 90
