--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,6 +1,6 @@
 name: Backport PR creator
 on:
-  pull_request_target:
+  pull_request:
     types: [closed]
     branches: [ 'main' ]
 
@@ -11,6 +11,7 @@ permissions:
 jobs:
   main:
     # Only run this job when a PR was merged (not just closed without merging)
+    # And make sure we only run this on our own repository, not on forks
     if: github.repository == 'grafana/beyla' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     # Grant specific permissions needed only for this job
