--- a/.github/workflows/generate-ebpf-binaries.yml
+++ b/.github/workflows/generate-ebpf-binaries.yml
@@ -22,29 +22,49 @@ jobs:
           ref: ${{ github.event.release.tag_name || github.event.inputs.tag_name }}
           fetch-depth: 0
 
-      - name: Generate eBPF binaries
-        run: make docker-generate
-
       - name: Configure Git
+        env:
+          RELEASE_TAG: ${{ github.event.release.tag_name || github.event.inputs.tag_name }}
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions"
+
+      - name: Generate eBPF binaries
+        run: make docker-generate
+
+      - name: Force add generated binaries
+        run: |
+          # Force add the binary files that might be gitignored
+          find . -name "*_bpfel.o" -type f -exec git add -f {} \;
+          find . -name "*_bpfel.go" -type f -exec git add -f {} \;
+          
+          # If no changes, create a dummy file to verify workflow execution
+          if [[ -z $(git status --porcelain) ]]; then
+            echo "No changes detected in eBPF binaries"
+          fi
 
       - name: Commit and push generated binaries
         env:
           RELEASE_TAG: ${{ github.event.release.tag_name || github.event.inputs.tag_name }}
         run: |
-          git add -A
-          git commit -m "chore: generate eBPF binaries for release ${RELEASE_TAG}" || echo "No changes to commit"
-          
-          # Try to push directly first
-          if git push; then
-            echo "Successfully pushed changes"
+          # Only commit if there are changes to commit
+          if ! git diff --staged --quiet; then
+            git commit -m "chore: generate eBPF binaries for release ${RELEASE_TAG}"
+            
+            # Try to determine the source branch for this tag
+            target_branch=$(git branch -r --contains "tags/${RELEASE_TAG}" | grep -v HEAD | head -n 1 | sed 's/origin\///' || echo "main")
+            echo "Attempting to push changes to branch: ${target_branch}"
+            
+            if git push origin HEAD:${target_branch}; then
+              echo "Successfully pushed changes to ${target_branch}"
+            else
+              echo "Direct push failed - creating separate branch"
+              safe_tag=$(echo "${RELEASE_TAG}" | sed 's/[^a-zA-Z0-9._-]/-/g')
+              branch_name="update-binaries-for-${safe_tag}"
+              git checkout -b "${branch_name}"
+              git push -u origin "${branch_name}"
+              echo "Created branch ${branch_name} with changes"
+            fi
           else
-            # If direct push fails, create a branch and push that
-            safe_tag=$(echo "${RELEASE_TAG}" | sed 's/[^a-zA-Z0-9._-]/-/g')
-            branch_name="update-binaries-for-${safe_tag}"
-            git checkout -b "${branch_name}"
-            git push -u origin "${branch_name}"
-            echo "Created branch ${branch_name} with changes"
+            echo "No changes to commit"
           fi
