--- a/.github/workflows/generator-image.yml
+++ b/.github/workflows/generator-image.yml
@@ -1,6 +1,8 @@
 name: Publish Beyla Docker Generator Image
 on:
   workflow_dispatch:
+  push:
+    branches: [ 'main', 'release-*' ]
 
 # Set restrictive permissions at workflow level
 permissions:
@@ -13,6 +15,9 @@ env:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
+    # compute VERSION = "x.y" if branch is release-x.y, otherwise "main"
+    env:
+      VERSION: ${{ startsWith(github.ref, 'refs/heads/release-') && substring(github.ref, 19) || 'main' }}
 
     permissions:
       contents: read
@@ -58,4 +63,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: |
             "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.timestamp.outputs.ts }}"
-            "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main"
+            "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}"
