--- a/.github/workflows/clang-tidy-check.yml
+++ b/.github/workflows/clang-tidy-check.yml
@@ -1,10 +1,7 @@
 name: Clang Tidy Check
 
 on:
-  push:
-    branches: [ 'main', 'release-*' ]
-  pull_request:
-    branches: [ 'main', 'release-*' ]
+  workflow_dispatch:
 
 # Set restrictive permissions at workflow level
 permissions:
