--- a/.github/workflows/pull_request_oats_test.yml
+++ b/.github/workflows/pull_request_oats_test.yml
@@ -1,10 +1,7 @@
 name: PR OATS test
 
 on:
-  push:
-    branches: [ 'main', 'release-*' ]
-  pull_request:
-    branches: [ 'main', 'release-*' ]
+  workflow_dispatch:
 
 # Set restrictive permissions at workflow level
 permissions:
