--- a/.github/workflows/port-to-upstream.yml
+++ b/.github/workflows/port-to-upstream.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     types: [opened, synchronize, labeled, closed]
 
+permissions:
+  id-token: write
+  contents: write
+
 jobs:
   port-to-upstream:
     if: always()
