--- a/.github/workflows/port-to-upstream.yml
+++ b/.github/workflows/port-to-upstream.yml
@@ -20,14 +20,22 @@ jobs:
         uses: grafana/shared-workflows/actions/get-vault-secrets@main
         with:
           repo_secrets: |
-            UPSTREAM_GITHUB_TOKEN=github-app:upstream-github-token
+            GITHUB_APP_ID=github-app:app-id
+            GITHUB_APP_PRIVATE_KEY=github-app:private-key
       - name: Checkout Beyla
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Generate App Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ env.GITHUB_APP_ID }}
+          private-key: ${{ env.GITHUB_APP_PRIVATE_KEY }}
+          owner: open-telemetry
       - name: Push changes to fork for upstream PR
         env:
-          GH_TOKEN: ${{ env.UPSTREAM_GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           BRANCH=port/${{ github.event.pull_request.number }}-to-upstream
           git checkout -b $BRANCH
@@ -35,7 +43,7 @@ jobs:
           git push upstream-fork $BRANCH --force
       - name: Create PR to upstream repo
         env:
-          GH_TOKEN: ${{ env.UPSTREAM_GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           gh pr create \
             --title "[port] #${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }}" \
