--- a/.github/workflows/port-to-upstream.yml
+++ b/.github/workflows/port-to-upstream.yml
@@ -41,6 +41,13 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
+
+      - name: Checkout target repository
+        uses: actions/checkout@v4
+        with:
+          repository: grafana/opentelemetry-ebpf-instrumentation
+          token: ${{ steps.app-token.outputs.token }}
+          path: opentelemetry-ebpf-instrumentation          
           
       - name: Port changes and prepare PR
         env:
@@ -50,12 +57,8 @@ jobs:
           PR_TITLE: ${{ github.event.pull_request.title }}
           BRANCH_NAME: port/${{ github.event.pull_request.number }}-to-upstream
         run: |
-          # First, copy over the changes from the Beyla PR that need to be ported
-          # This depends on what specifically needs to be ported - you'll need to customize this part
-          # Example: cp -r some-path/* opentelemetry-ebpf/destination-path/
-          
           # Navigate to the target repository
-          cd opentelemetry-ebpf
+          cd opentelemetry-ebpf-instrumentation
           
           # Configure git locally
           git config --local user.email "actions@github.com"
