--- a/.github/workflows/generator-image.yml
+++ b/.github/workflows/generator-image.yml
@@ -15,9 +15,6 @@ env:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
-    # compute VERSION = "x.y" if branch is release-x.y, otherwise "main"
-    env:
-      VERSION: ${{ startsWith(github.ref, 'refs/heads/release-') && substring(github.ref, 19) || 'main' }}
 
     permissions:
       contents: read
@@ -52,6 +49,19 @@ jobs:
       - name: Get current timestamp
         id: timestamp
         run: echo "::set-output name=ts::$(date +'%Y%m%d%H%M')"
+
+        # compute VERSION = "x.y" if branch is release-x.y, otherwise "main"
+      - name: Extract version
+        id: version
+        run: |
+          if [[ "${GITHUB_REF_NAME}" == release-* ]]; then
+            echo "version=${GITHUB_REF_NAME#release-}" >> $GITHUB_OUTPUT
+          else
+            echo "version=main" >> $GITHUB_OUTPUT
+          fi
+      - run: echo "Version is ${{ steps.version.outputs.version }}"
+
+
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
@@ -63,4 +73,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: |
             "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.timestamp.outputs.ts }}"
-            "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}"
+            "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}"
